bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if ( 89< n <111) {
    return true;
  } 
  if (190< n <210) {
    return true;
  }
  else {
    return false;
  }
}